package licuadora.app.model;

public interface Costeable {
    public Double getPrecio();
}
