package licuadora.app.model.tienda;

public interface EstadoPublicacion {
    public Boolean puedeAgregarAlCarrito();
    public Boolean puedeSacarDelCarrito();
}
